--- a/environment.html
+++ b/environment.html
@@ -73,35 +73,9 @@
     <p id="alk2">Donate them any amount of money you want!</p>
   </div>
 <br>
-  <div class="donate col-9 col-s-9 col-ss-9">
-    <select id="money" id="money">}
-    <optgroup label="0$ - 100$">
-      <option value="0dollar">0$</option>
-      <option value="10dollar">10$</option>
-      <option value="20dollar">20$</option>
-      <option value="30dollar">30$</option>
-      <option value="40dollar">40$</option>
-      <option value="50dollar">50$</option>
-      <option value="60dollar">60$</option>
-      <option value="70dollar">70$</option>
-      <option value="80dollar">80$</option>
-      <option value="90dollar">90$</option>
-      <option value="100dollar">100$</option>
-    </optgroup>
-
-    <optgroup label="200$ - 1000$">
-      <option value="200dollar">200$</option>
-      <option value="300dollar">300$</option>
-      <option value="400dollar">400$</option>
-      <option value="500dollar">500$</option>
-      <option value="600dollar">600$</option>
-      <option value="700dollar">700$</option>
-      <option value="800dollar">800$</option>
-      <option value="900dollar">900$</option>
-      <option value="1000dollar">1000$</option>
-    </optgroup>
-    </select>
-    </div>
+  <div class="donate">
+    <a href="donatetodayform.html">Donate today</a>
+  </div>
   </div> <!-- first one ( homeless people )-->
 
 
@@ -115,35 +89,10 @@
 </div>
 <br>
 
-<div class="donate col-9 col-s-9 col-ss-9">
-<select id="money" id="money">}
-  <optgroup label="0$ - 100$">
-  <option value="0dollar">0$</option>
-  <option value="10dollar">10$</option>
-<option value="20dollar">20$</option>
-  <option value="30dollar">30$</option>
-<option value="40dollar">40$</option>
-  <option value="50dollar">50$</option>
-<option value="60dollar">60$</option>
-  <option value="70dollar">70$</option>
-<option value="80dollar">80$</option>
-  <option value="90dollar">90$</option>
-<option value="100dollar">100$</option>
-</optgroup>
-
-  <optgroup label="200$ - 1000$">
-  <option value="200dollar">200$</option>
-<option value="300dollar">300$</option>
-  <option value="400dollar">400$</option>
-<option value="500dollar">500$</option>
-  <option value="600dollar">600$</option>
-<option value="700dollar">700$</option>
-  <option value="800dollar">800$</option>
-<option value="900dollar">900$</option>
-<option value="1000dollar">1000$</option>
-</select>
-</optgroup>
-</select></div></div><!-- second one ( fix their houses )-->
+<div class="donate">
+    <a href="donatetodayform.html">Donate today</a>
+  </div>
+</div><!-- second one ( fix their houses )-->
 
 
 
@@ -157,39 +106,11 @@
 </div>
 <br>
 
-<div class="donate ">
-<select id="money" id="money> col-9 col-s-9 col-ss-9">
-  <optgroup label="0$ - 100$">
-  <option value="0dollar">0$</option>
-  <option value="10dollar">10$</option>
-<option value="20dollar">20$</option>
-  <option value="30dollar">30$</option>
-<option value="40dollar">40$</option>
-  <option value="50dollar">50$</option>
-<option value="60dollar">60$</option>
-  <option value="70dollar">70$</option>
-<option value="80dollar">80$</option>
-  <option value="90dollar">90$</option>
-<option value="100dollar">100$</option>
-</optgroup>
-
-  <optgroup label="200$ - 1000$">
-  <option value="200dollar">200$</option>
-<option value="300dollar">300$</option>
-  <option value="400dollar">400$</option>
-<option value="500dollar">500$</option>
-  <option value="600dollar">600$</option>
-<option value="700dollar">700$</option>
-  <option value="800dollar">800$</option>
-<option value="900dollar">900$</option>
-<option value="1000dollar">1000$</option>
-</select>
-</optgroup>
-</select></div></div>
+<div class="donate">
+    <a href="donatetodayform.html">Donate today</a>
+  </div></div>
 <!-- third (farmers)-->
 
-
- <input type="submit" name="reset" value="Donate!" onclick="alert('Thank you so much for donating! ') " id="submit" >
 </div>
 
 
