--- a/Disability.html
+++ b/Disability.html
@@ -90,7 +90,7 @@
 		
 		<br>
 		<div class="donatee col-10 col-s-10 col-ss-10">
-			<a href="Donate Today.html"><p id="dt">Donate Today</p></a>
+			<a href="Donate today.html"><p id="dt">Donate Today</p></a>
 		</div>
 
 		<!-- footer start  -->
