--- a/environment.html
+++ b/environment.html
@@ -73,7 +73,7 @@
     <p id="alk2">Donate them any amount of money you want!</p>
   </div>
 <br>
-  <div class="donate">
+  <div class="donateforenv">
     <a href="donatetodayform.html">Donate today</a>
   </div>
   </div> <!-- first one ( homeless people )-->
@@ -89,7 +89,7 @@
 </div>
 <br>
 
-<div class="donate">
+<div class="donateforenv">
     <a href="donatetodayform.html">Donate today</a>
   </div>
 </div><!-- second one ( fix their houses )-->
@@ -106,7 +106,7 @@
 </div>
 <br>
 
-<div class="donate">
+<div class="donateforenv">
     <a href="donatetodayform.html">Donate today</a>
   </div></div>
 <!-- third (farmers)-->
