--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
       </div>
       </a>
       
-      <a href="aboutus.html">
+      <a href="Aboutus.html">
       <div class="v col-2 col-s-4 col-ss-8">
         <img src="PBL/Volunteer.png" id="v">
         <b><h2>About Us</h2></b>
