--- a/Login.html
+++ b/Login.html
@@ -72,7 +72,7 @@
 
   <div class="form col-8 col-s-8 col-ss-11">
     <p>Login into your account</p>
-    <a href="signup.html"> 
+    <a href="Signup.html"> 
       <div class="sg">   
         <p class="sg">If you do not have an account, click here to sign up</p>
       </div>
