--- a/Adoptform.html
+++ b/Adoptform.html
@@ -137,7 +137,7 @@
             <input type="text" placeholder="Enter Your Animal ID" id="aida">
         </div>
 
-       <input type="submit" name="reset" value="Donate!" onclick="alert('Thank you for adopting!') " id="clearr" >
+       <input type="submit" name="reset" value="Adopt!" onclick="alert('Thank you for adopting!') " id="clearr" >
 
             <input type="reset" value="Clear" id="clearr">
 
@@ -193,6 +193,8 @@
 <h4 id="h4">No.36, Kone Baung street, 
 North Okkalapa Township, Yangon, Myanmar </h4>
 </a>
+<br>
+<h4 id="h4">Copyright © 2023 All rights reserved. | www.well-worthy.com</h4>
 </div>
 </body>
 </html>
