--- a/Dog.html
+++ b/Dog.html
@@ -32,7 +32,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
   <div class="logo col-2 col-s-3 col-ss-3">
-      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
   </div>
 
   <input  class="menu-btn" type="checkbox" id="menu-btn">
@@ -128,7 +128,7 @@
   <div class="area col-ss-12 col-s-12 col-12">
 
     <div class="saicookie col-ss-8 col-s-4 col-2">
-      <img src="PBL/sai cookie.jpg" id="saicookie" title="Image in animals collection by ~luxurious Taste~|@pinterest.com">
+      <img src="PBL/sai cookie.jpg" id="saicookie" alt="cookiethedog" title="Image in animals collection by ~luxurious Taste~|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Sai Cookie</p>
       <p id="pp">Pomerianian</p>
@@ -140,7 +140,7 @@
     </div>
 
     <div class="chewie col-ss-8 col-s-4 col-2">
-      <img src="PBL/Chewie.png" id="chewie" title="Adopt Gypsy on Petfinder|@pinterest.com">
+      <img src="PBL/Chewie.png" id="chewie" alt="chewiethedog" title="Adopt Gypsy on Petfinder|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Chewie</p>
       <p id="pp">Rottweiler</p>
@@ -152,7 +152,7 @@
     </div>
 
     <div class="max col-ss-8 col-s-4 col-2">
-      <img src="PBL/max.jpg" id="max" title="Bloody Morning - Diabolik Lovers Imagines & One Shots|@pinterest.com">
+      <img src="PBL/max.jpg" id="max" alt="maxthedog" title="Bloody Morning - Diabolik Lovers Imagines & One Shots|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Max</p>
       <p id="pp">Chihuahua</p>
@@ -164,7 +164,7 @@
     </div>
 
     <div class="nawalboe col-ss-8 col-s-4 col-2">
-      <img src="PBL/alboe.jpg" id="alboe" title="istanbulmu9 ❦|@Pinterest.com">
+      <img src="PBL/alboe.jpg" id="alboe" alt="nawalboethedog" title="istanbulmu9 ❦|@Pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Naw Alboe</p>
       <p id="pp">Border Collie</p>
@@ -176,7 +176,7 @@
     </div>
 
     <div class="nannora col-ss-8 col-s-4 col-2">
-      <img src="PBL/nora.jpg" id="nora" title="Red Nose Pitbull Puppies For Sale|@Pinterest.com">
+      <img src="PBL/nora.jpg" id="nora" alt="wintthedog" title="Red Nose Pitbull Puppies For Sale|@Pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Wint</p>
       <p id="pp">Staffy</p>
@@ -188,7 +188,7 @@
     </div>
 
     <div class="gongyang col-ss-8 col-s-4 col-2">
-      <img src="PBL/yang.jpg" id="yang" title="Top 100 Best Siberian Husky Dog Names|@pinterest.com">
+      <img src="PBL/yang.jpg" id="yang" alt="gongyangthedog" title="Top 100 Best Siberian Husky Dog Names|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Gong Yang</p>
       <p id="pp">Siberian Husky</p>
@@ -200,7 +200,7 @@
     </div>
 
     <div class="bumbum col-ss-8 col-s-4 col-2">
-      <img src="PBL/bum.jpg" id="bum" title="Say Hello to Humphrey!|@pinterest.com">
+      <img src="PBL/bum.jpg" id="bum" alt="bumbumthedog" title="Say Hello to Humphrey!|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Bum Bum</p>
       <p id="pp">Labrador</p>
@@ -212,7 +212,7 @@
     </div>
 
     <div class="miphyu col-ss-8 col-s-4 col-2">
-      <img src="PBL/mi.jpg" id="mi" title="White Boxer with bow tie, Christmas Boxer dog!|@pinterest.com">
+      <img src="PBL/mi.jpg" id="mi" alt="miphyuthedog" title="White Boxer with bow tie, Christmas Boxer dog!|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Mi Phyu</p>
       <p id="pp">Boxer</p>
@@ -224,7 +224,7 @@
     </div>
 
     <div class="guanjun col-ss-8 col-s-4 col-2">
-      <img src="PBL/jun.jpg" id="jun" title="Poodle on Instagram|@pinterest.com">
+      <img src="PBL/jun.jpg" id="jun" alt="junthedog" title="Poodle on Instagram|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Guan Jun</p>
       <p id="pp">Poodle</p>
@@ -236,7 +236,7 @@
     </div>
 
     <div class="baozhu col-ss-8 col-s-4 col-2">
-      <img src="PBL/zhu.jpg" id="zhu" title="small cute puppies|@pinterest.com">
+      <img src="PBL/zhu.jpg" id="zhu" alt="baozhuthedog" title="small cute puppies|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Bao Zhu</p>
       <p id="pp">Poodle</p>
@@ -248,7 +248,7 @@
     </div>
 
     <div class="bingbing col-ss-8 col-s-4 col-2">
-      <img src="PBL/bing.jpg" id="bing" title="Dog dies after testing positive for coronavirus|@pinterest.com">
+      <img src="PBL/bing.jpg" id="bing" alt="bingthedog" title="Dog dies after testing positive for coronavirus|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Bing Bing</p>
       <p id="pp">Pomerianian</p>
@@ -260,7 +260,7 @@
     </div>
 
     <div class="BaoBao col-ss-8 col-s-4 col-2">
-      <img src="PBL/bao.jpg" id="bao" title="my little cute friend, as well gentel too|@pinterest.com">
+      <img src="PBL/bao.jpg" id="bao" alt="baothedog" title="my little cute friend, as well gentel too|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Bao Bao</p>
       <p id="pp">Corgi</p>
@@ -336,6 +336,8 @@
 <h4 id="h4">No.36, Kone Baung street, 
 North Okkalapa Township, Yangon, Myanmar </h4>
 </a>
+<br>
+<h4 id="h4">Copyright © 2023 All rights reserved. | www.well-worthy.com</h4>
 </div> 
 </body>
 </html>
