--- a/Aboutus.html
+++ b/Aboutus.html
@@ -23,15 +23,15 @@
   </div>
 
   <div class="media col-3 col-s-3 col-ss-3">
-    <a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-    <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-    <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+    <a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+    <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+    <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
   </div>
 </nav>
 
 <nav class="lower col-12 col-s-12 col-ss-12">
   <div class="logo col-2 col-s-3 col-ss-3">
-      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
   </div>
 
   <input  class="menu-btn" type="checkbox" id="menu-btn">
@@ -63,7 +63,7 @@
   <div class="objectives col-11 col-s-11 col-ss-11">
     <h1 style="color: #95c9ad; font-size: 30px;" id="ooow" >Objective of our website</h1>
     <br>
-    <img src="PBL/Well Worthy 3.png" id="imgg">
+    <img src="PBL/Well Worthy 3.png" id="imgg" alt="logo" >
     <p id="objectives">This website is to help the living things and our environment. We make it safe, easy, and fun for anyone to give to registered charities. Want to raise money for your favourite cause?  No matter how you want to give, we’re your go-to place!</p>
     <br>
     <p id="objectives">Are you a registered charity? With us, you can manage and engage all your volunteer and donors in the same place. We've also introduced dashboards, where you can view and compare your giving activity with your peers.</p>
@@ -76,7 +76,7 @@
 <!-- for wint kay -->
   <div class="members">
     <div class="wintkay col-ss-8 col-s-5 col-2">
-      <img src="PBL/wintkay.jpg" id="img" >
+      <img src="PBL/wintkay.jpg" id="img" alt="wintk" >
       <div id="contents">
         <h2>Wint Kay Khine Kyaw</h2>
         <br>
@@ -94,7 +94,7 @@
 
 <!-- for hsu htet -->
     <div class="hsuhtet  col-ss-8 col-s-5 col-2">
-      <img src="PBL/hsu.jpg" id="img">
+      <img src="PBL/hsu.jpg" id="img" alt="hsu" >
       <div id="contents">
         <h2>Hsu Htet Htet Kyaw</h2>
         <br>
@@ -113,7 +113,7 @@
 
 <!-- for alinkar -->
     <div class="alinkar  col-ss-8 col-s-5 col-2">
-      <img src="PBL/alk.png" id="img">
+      <img src="PBL/alk.png" id="img" alt="alinkar" >
       <div>
         <h2>Alinkar May</h2>
         <br>
@@ -132,7 +132,7 @@
 
 <!-- for nanphoo -->
     <div class="nanphoo  col-ss-8 col-s-5 col-2">
-      <img src="PBL/nanphoo.jpg" id="img">
+      <img src="PBL/nanphoo.jpg" id="img" alt="nanphoo" >
       <div>
         <h2>Nan Phoo Thit Pye</h2>
         <br>
@@ -169,9 +169,9 @@
     <div class="jan col-ss-8 col-s-10 col-3">
     <br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1" alt="tt" ></a>
 </div>
 
   <div class="feb col-ss-8 col-s-3 col-2">
