--- a/Adopt.html
+++ b/Adopt.html
@@ -24,15 +24,15 @@
   </div>
 
   <div class="media col-3 col-s-3 col-ss-3">
-    <a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-    <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-    <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+    <a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+    <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+    <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
   </div>
 </nav>
 
 <nav class="lower col-12 col-s-12 col-ss-12">
   <div class="logo col-2 col-s-3 col-ss-3">
-      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
   </div>
 
   <input  class="menu-btn" type="checkbox" id="menu-btn">
@@ -58,7 +58,7 @@
 
   <div class="dog col-ss-11 col-s-11 col-11">
     <div class="dog2 col-2 col-s-2 col-ss-2">
-      <img src="PBL/dog.jpg" id="dog2"title="Golden Retriever|@pinterest.com">
+      <img src="PBL/dog.jpg" id="dog2"title="Golden Retriever|@pinterest.com" alt="dog" >
     </div>
     <div class="dog3 col-6 col-s-6 col-ss-6">
       <p id="dogs">Available Adoptable Dogs </p>
@@ -66,7 +66,7 @@
     <div class="dog4 col-3 col-s-3 col-ss-3">
       <a href="Dog.html">
         <div class="next col-12 col-s-12 col-ss-12">
-          <img src="PBL/arrow.png" class="arrow col-ss-12 col-s-10 col-10">
+          <img src="PBL/arrow.png" class="arrow col-ss-12 col-s-10 col-10" alt="arrow" >
         </div>
       </a>
     </div>
@@ -74,7 +74,7 @@
 
   <div class="cat col-ss-11 col-s-11 col-11">
     <div class="cat2 col-2 col-s-2 col-ss-2">
-      <img src="PBL/cat.jpg" id="cat2" title="Kitten|@pinterest.com">
+      <img src="PBL/cat.jpg" id="cat2" title="Kitten|@pinterest.com" alt="dog" >
     </div>
     <div class="cat3 col-6 col-s-6 col-ss-6">
       <p id="cats">Available Adoptable Cats</p>
@@ -82,7 +82,7 @@
     <div class="cat4 col-3 col-s-3 col-ss-3">
       <a href="Cat.html">
         <div class="nextt col-12 col-s-12 col-ss-12">
-          <img src="PBL/arrow.png" class ="arroww col-ss-12 col-s-10 col-10">
+          <img src="PBL/arrow.png" class ="arroww col-ss-12 col-s-10 col-10" alt="arrow" >
         </div>
       </a>
     </div>
@@ -95,9 +95,9 @@
     <div class="jan col-ss-8 col-s-10 col-3">
     <br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1" alt="tt" ></a>
 </div>
 
   <div class="feb col-ss-8 col-s-3 col-2">
