--- a/Cat.html
+++ b/Cat.html
@@ -23,15 +23,15 @@
   </div>
 
   <div class="media col-3 col-s-3 col-ss-3">
-    <a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-    <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-    <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+    <a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+    <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig"  ></a>
+    <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
   </div>
 </nav>
 
 <nav class="lower col-12 col-s-12 col-ss-12">
   <div class="logo col-2 col-s-3 col-ss-3">
-      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+      <a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
   </div>
 
   <input  class="menu-btn" type="checkbox" id="menu-btn">
@@ -115,7 +115,7 @@
 <div class="area col-ss-12 col-s-12 col-12">
 
     <div class="Lili col-ss-8 col-s-4 col-2">
-      <img src="PBL/lili.jpg" id="lili" title="Domestic Medium Hair Cat|@pinterest.com">
+      <img src="PBL/lili.jpg" id="lili" alt="lilithecat" title="Domestic Medium Hair Cat|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Lili</p>
       <p id="pp">Domestic Medium Hair</p>
@@ -127,7 +127,7 @@
     </div>
 
     <div class="louis col-ss-8 col-s-4 col-2">
-      <img src="PBL/louis.png" id="louis" title="Adopt Rosie on Petfinder|@pinterest.com">
+      <img src="PBL/louis.png" id="louis" alt="louisthecat" title="Adopt Rosie on Petfinder|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Louis</p>
       <p id="pp">Domestic Short Hair</p>
@@ -139,7 +139,7 @@
     </div>
 
     <div class="spice col-ss-8 col-s-4 col-2">
-      <img src="PBL/spice.jpg" id="spice" title="My Angry cat|@pinterest.com">
+      <img src="PBL/spice.jpg" id="spice" alt="spicethecat" title="My Angry cat|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Spice</p>
       <p id="pp">Domestic Long Hair</p>
@@ -151,7 +151,7 @@
     </div>
 
     <div class="milo col-ss-8 col-s-4 col-2">
-      <img src="PBL/milo.jpg" id="milo" title="Shan Fetter|@pinterest.com">
+      <img src="PBL/milo.jpg" id="milo" alt="milothecat" title="Shan Fetter|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Milo</p>
       <p id="pp">Exotic Short Hair</p>
@@ -163,7 +163,7 @@
     </div>
 
     <div class=" love col-ss-8 col-s-4 col-2">
-      <img src="PBL/love.jpg" id="love" title="Domestic Medium Hair Rescue Cats for Adoption near Eaton Rapids, Michigan|@pinterest.com">
+      <img src="PBL/love.jpg" id="love" alt="lovethecat" title="Domestic Medium Hair Rescue Cats for Adoption near Eaton Rapids, Michigan|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Love</p>
       <p id="pp">Domestic Medium Hair</p>
@@ -175,7 +175,7 @@
     </div>
 
     <div class="lily col-ss-8 col-s-4 col-2">
-      <img src="PBL/lily.jpg" id="lily" title="Adopt NORWAY - Waiting Over a Year on Petfinder|@pinterest.com">
+      <img src="PBL/lily.jpg" id="lily" alt="lilythecat" title="Adopt NORWAY - Waiting Over a Year on Petfinder|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Lily</p>
       <p id="pp">Domestic Short Hair</p>
@@ -187,7 +187,7 @@
     </div>
 
     <div class="Luca col-ss-8 col-s-4 col-2">
-      <img src="PBL/luca.jpg" id="luca" title="Goldenflower|@pinterest.com">
+      <img src="PBL/luca.jpg" id="luca" alt="lucathecat" title="Goldenflower|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Luca</p>
       <p id="pp">Domestic Long Hair</p>
@@ -199,7 +199,7 @@
     </div>
 
     <div class="leo col-ss-8 col-s-4 col-2">
-      <img src="PBL/leo.jpg" id="leo" title="i see youu guys|@pinterest.com">
+      <img src="PBL/leo.jpg" id="leo" alt="leothecat" title="i see youu guys|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Leo</p>
       <p id="pp">Exotic Short Hair</p>
@@ -211,7 +211,7 @@
     </div>
 
     <div class="ren col-ss-8 col-s-4 col-2">
-      <img src="PBL/ren.png" id="ren" title="Adopt Fluffaluffagus on Petfinder|@pinterest.com">
+      <img src="PBL/ren.png" id="ren" alt="renthecat" title="Adopt Fluffaluffagus on Petfinder|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Ren</p>
       <p id="pp">Domestic Medium Hair</p>
@@ -223,7 +223,7 @@
     </div>
 
     <div class="mono col-ss-8 col-s-4 col-2">
-      <img src="PBL/mono.jpg" id="mono" title="Adopt Callie - ADOPTED! on Petfinder|@pinterest.com">
+      <img src="PBL/mono.jpg" id="mono" alt="monothecat" title="Adopt Callie - ADOPTED! on Petfinder|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Mono</p>
       <p id="pp">Domestic Short Hair</p>
@@ -235,7 +235,7 @@
     </div>
 
     <div class="tabby col-ss-8 col-s-4 col-2">
-      <img src="PBL/tabby.jpg" id="tabby" title="Long haired Tabby|@pinterest.com">
+      <img src="PBL/tabby.jpg" id="tabby" alt="tabbythecat" title="Long haired Tabby|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Tabby</p>
       <p id="pp">Domestic Long Hair</p>
@@ -247,7 +247,7 @@
     </div>
 
     <div class="chubby col-ss-8 col-s-4 col-2">
-      <img src="PBL/chubby.png" id="chubby" title="Persian cats|@pinterest.com">
+      <img src="PBL/chubby.png" id="chubby" alt="chubbythecat" title="Persian cats|@pinterest.com">
       <div id="not">North Okkalapa Township</div>
       <p id="ppp">Chubby</p>
       <p id="pp">Exotic Short Hair</p>
@@ -281,9 +281,9 @@
  <div class="jan col-ss-8 col-s-10 col-3">
     <br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1" alt="tt" ></a>
 </div>
 
   <div class="feb col-ss-8 col-s-3 col-2">
