--- a/Disability.html
+++ b/Disability.html
@@ -25,9 +25,9 @@
  
 
   <div class="media col-3 col-s-3 col-ss-3">
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
 </div>
 </nav>
 
@@ -35,7 +35,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
 <div class="logo col-2 col-s-3 col-ss-3">
-<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
 </div>
 
  
@@ -65,7 +65,7 @@
 			</div>
 
 			<div class="box col-ss-8 col-s-5 col-3">
-				<img src="PBL/disability.png" id="disa" title=" person disabled|@iconfinder.com">
+				<img src="PBL/disability.png" id="disa" alt="persondisabled" title=" person disabled|@iconfinder.com">
 				<h2>What is Disability</h2>
 				<p>A disability is an condition of the body that have difficult condition to do movement and activities. It is a physical substantially limits for major life activities.Disability can be happen from the interaction between individuals with a health condition.</p>
 			</div>
@@ -73,7 +73,7 @@
 
 		
 			<div class="box1 col-ss-8 col-s-5 col-3">
-				<img src="PBL/childhood.png" id="disa" title=" Artificial|@iconfinder.com">
+				<img src="PBL/childhood.png" id="disa" alt="childhooddisability" title=" Artificial|@iconfinder.com">
 				<h2>Childhood Disability</h2>
 				<p>A childhood disability may be present from birth or develop after birth.There are many types of disability, including disabilities that children are born with. Children with disability are special needs and require early intervention.</p>
 			</div>
@@ -82,7 +82,7 @@
 
 		
 			<div class="box2 col-ss-8 col-s-5 col-3">
-				<img src="PBL/animal.png" id="disa" title=" disable dog|@iconfinder.com">
+				<img src="PBL/animal.png" id="disa" alt="animaldisability" title=" disable dog|@iconfinder.com">
 				<h2>Animal Disability</h2>
 				<p>This can be happen at birth or accroding through injury. Animals can either be born with or acquire deafness.Animals can either be born with blindness or develop it over the course of their life.</p>
 			</div>
@@ -99,9 +99,9 @@
    <div class="jan col-ss-8 col-s-10 col-3">
   	<br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1" alt="tt" ></a>
 </div>
 
   <div class="feb col-ss-8 col-s-3 col-2">
