--- a/Donate today.html
+++ b/Donate today.html
@@ -26,9 +26,9 @@
  
 
   <div class="media col-3 col-s-3 col-ss-3">
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
 </div>
 </nav>
 
@@ -36,7 +36,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
 <div class="logo col-2 col-s-3 col-ss-3">
-<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
 </div>
 
  
@@ -70,7 +70,7 @@
 <p id="dtdy"> 8 results found...</p>
 
 <div class="container1  col-ss-8 col-s-4 col-2">
-  <img src="PBL/charity.png" id="img" title="charity | @probonoaustralia.com.au ">
+  <img src="PBL/charity.png" id="img" alt="charity" title="charity | @probonoaustralia.com.au ">
   <div id="ch">Donate to charity</div>
   <div id="texttt">Donate money to WELL WORTHY for the charities! </div>
   <div class="donatefordt">
@@ -81,7 +81,7 @@
 
 
 <div class="container  col-ss-8 col-s-4 col-2">
-  <img src="PBL/kids5.png" id="img" title="homeless kid | @www.acf.hhs.gov ">
+  <img src="PBL/kids5.png" id="img" alt="homeless" title="homeless kid | @www.acf.hhs.gov ">
   <div id="ch">Save the children</div>
   <div id="texttt"> Donate money to WELL WORTHY if you want to help thchildren</div>
   <div class="donatefordt">
@@ -91,7 +91,7 @@
 
 
 <div class="container3 col-ss-8 col-s-4 col-2">
-  <img src="PBL/cancer.png" id="img" title="a man with cancer | @www.npr.org">
+  <img src="PBL/cancer.png" id="img" alt="cancer" title="a man with cancer | @www.npr.org">
   <div id="ch">Cure cancer</div>
   <div id="texttt"> Donate money to WELL WORTHY if you want to help the people with cancer</div>
   <div class="donatefordt">
@@ -101,7 +101,7 @@
 
 
 <div class="container col-ss-8 col-s-4 col-2">
-  <img src="PBL/food.png" id="img" title="food | @livingnomads.com ">
+  <img src="PBL/food.png" id="img" alt="food" title="food | @livingnomads.com ">
   <div id="ch">Donate food</div>
   <div id="texttt">Donate money to WELL WORTHY if you want to help the people who need water and food</div>
   <div class="donatefordt">
@@ -112,7 +112,7 @@
 
 <div class="another">
   <div class="container1 col-ss-8 col-s-4 col-2">
-  <img src="PBL/afkgirl.png" id="img" title="african kid |   @www.worldvision.org.uk ">
+  <img src="PBL/afkgirl.png" id="img" alt="african" title="african kid |   @www.worldvision.org.uk ">
   <div id="ch">Support africans</div>
   <div id="texttt"> Donate money to WELL WORTHY if you want to help the africans!</div>
   <div class="donatefordt">
@@ -121,7 +121,7 @@
 </div>
 
 <div class="container col-ss-8 col-s-4 col-2">
-  <img src="PBL/straydogs.png" id="img" title="stray dogs | @aldf.org ">
+  <img src="PBL/straydogs.png" id="img" alt="straydogs" title="stray dogs | @aldf.org ">
   <div id="ch">Save stray dogs</div>
   <div id="texttt">Donate money to WELL WORTHY if you want to help stray dogs!</div>
   <div class="donatefordt">
@@ -131,7 +131,7 @@
  
 
 <div class="container3 col-ss-8 col-s-4 col-2">
-  <img src="PBL/straycats.png" id="img" title="stray cats | @britannica.com ">
+  <img src="PBL/straycats.png" id="img" alt="straycat" title="stray cats | @britannica.com ">
   <div id="ch">Save stray cats</div>
   <div id="texttt">Donate money to WELL WORTHY if you want to help poor stray cats!</div>
   <div class="donatefordt">
@@ -157,7 +157,7 @@
     <div class="jan col-ss-8 col-s-10 col-3">
     <br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" ></a>
 <a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
 <a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
 </div>
@@ -199,6 +199,8 @@
 <h4 id="h4">No.36, Kone Baung street, 
 North Okkalapa Township, Yangon, Myanmar </h4>
 </a>
+<br>
+<h4 id="h4">Copyright © 2023 All rights reserved. | www.well-worthy.com</h4>
 </div> 
 </body>
 </html>
