--- a/donatetodayform.html
+++ b/donatetodayform.html
@@ -25,9 +25,9 @@
  
 
   <div class="media col-3 col-s-3 col-ss-3">
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
 </div>
 </nav>
 
@@ -35,7 +35,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
 <div class="logo col-2 col-s-3 col-ss-3">
-<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
 </div>
 
  
@@ -49,7 +49,7 @@
 
       <ul class="left col-9 col-s-9">
 <li><a href="home.html">HOME</a></li>
-<li><a href="Donate today.html"  class="active">DONATE</a></li>
+<li><a href="Donate today.html">DONATE</a></li>
 <li><a href="Fundraise.html">FUNDRAISE</a></li>
 <li><a href="Adopt.html">ADOPT</a></li>
 <li><a href="account.html">CREATE ACCOUNT</a></li>
@@ -128,9 +128,9 @@
     <div class="jan col-ss-8 col-s-10 col-3">
     <br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1" alt="tt" ></a>
 </div>
 
   <div class="feb col-ss-8 col-s-3 col-2">
@@ -170,6 +170,8 @@
 <h4 id="h4">No.36, Kone Baung street, 
 North Okkalapa Township, Yangon, Myanmar </h4>
 </a>
+<br>
+<h4 id="h4">Copyright © 2023 All rights reserved. | www.well-worthy.com</h4>
 </div>
 </body>
 </html>
