--- a/elderly.html
+++ b/elderly.html
@@ -26,9 +26,9 @@
  
 
   <div class="media col-3 col-s-3 col-ss-3">
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
 </div>
 </nav>
 
@@ -36,7 +36,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
 <div class="logo col-2 col-s-3 col-ss-3">
-<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
 </div>
 
  
@@ -78,9 +78,9 @@
 
 
 <div class="picc col-ss-9 col-s-9 col-10">
-    <img src="PBL/care.jpg" class="cheshire col-3 col-s-3 col-ss-10"  title="associated elder people  | @Forbes">
-    <img src="PBL/care 2.jpg"class="cheshire col-3 col-s-3 col-ss-10" title="Patient reading  | @companionhomecareoflongisland">
-    <img src="PBL/care 3.jpg" class="cheshire col-3 col-s-3 col-ss-10" title="helping Grandmother | @GillesARROYO">
+    <img src="PBL/care.jpg" class="cheshire col-3 col-s-3 col-ss-10"  alt="elderly1" title="associated elder people  | @Forbes">
+    <img src="PBL/care 2.jpg"class="cheshire col-3 col-s-3 col-ss-10" alt="elderly2" title="Patient reading  | @companionhomecareoflongisland">
+    <img src="PBL/care 3.jpg" class="cheshire col-3 col-s-3 col-ss-10" alt="elderly3" title="helping Grandmother | @GillesARROYO">
 </div>
 
 <a href="donatetodayform.html">
@@ -99,9 +99,9 @@
     <div class="jan col-ss-8 col-s-10 col-3">
     <br>
 <b><h3 id="h3">Follow Us For More!</h3></b>
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb1" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig1" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt1" alt="tt" ></a>
 </div>
 
   <div class="feb col-ss-8 col-s-3 col-2">
@@ -141,6 +141,8 @@
 <h4 id="h4">No.36, Kone Baung street, 
 North Okkalapa Township, Yangon, Myanmar </h4>
 </a>
+<br>
+<h4 id="h4">Copyright © 2023 All rights reserved. | www.well-worthy.com</h4>
 </div>
   
 </body>
