--- a/environment.html
+++ b/environment.html
@@ -24,9 +24,9 @@
  
 
   <div class="media col-3 col-s-3 col-ss-3">
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
 </div>
 </nav>
 
@@ -34,7 +34,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
 <div class="logo col-2 col-s-3 col-ss-3">
-<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
 </div>
 
  
@@ -68,7 +68,7 @@
 <div class="first  col-ss-10 col-s-10  col-10">
 
   <div class="homeless">
-    <img src="PBL/homeless.png" class="homelessimg" title=" homeless people @latimes.com ">
+    <img src="PBL/homeless.png" alt="homelesspeople" class="homelessimg" title=" homeless people @latimes.com ">
     <h2 id="alk2">Help Homeless People </h2>
     <p id="alk2">Donate them any amount of money you want!</p>
   </div>
@@ -83,7 +83,7 @@
 <!-- second one -->
 <div class="second   col-ss-10 col-s-10  col-10">
 <div class="house">
-  <img src="PBL/house.png" class="houseimg" title=" broken houses @sketchfab.com ">
+  <img src="PBL/house.png" alt="house" class="houseimg" title=" broken houses @sketchfab.com ">
   <h2 id="alk2">Help people to fix their homes </h2>
   <p id="alk2">Donate them any amount of money you want!</p>
 </div>
@@ -100,7 +100,7 @@
 <!-- third one -->
 <div class="third   col-ss-10 col-s-10  col-10">
 <div class="farmer">
-  <img src="PBL/farm.png" class="farmimg" title="farmer image @www.da.gov.ph ">
+  <img src="PBL/farm.png" alt="farm"  class="farmimg" title="farmer image @www.da.gov.ph ">
   <h2 id="alk2">Help farmers to buy the items they need for farming.</h2>
   <p id="alk2">Donate them any amount of money you want!</p>
 </div>
@@ -161,6 +161,8 @@
 <h4 id="h4">No.36, Kone Baung street, 
 North Okkalapa Township, Yangon, Myanmar </h4>
 </a>
+<br>
+<h4 id="h4">Copyright © 2023 All rights reserved. | www.well-worthy.com</h4>
 </div>
 </body>
 </html>
