--- a/home.html
+++ b/home.html
@@ -26,9 +26,9 @@
  
 
   <div class="media col-3 col-s-3 col-ss-3">
-<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb"></a>
-<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig"></a>
-<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt"></a>
+<a href="https://www.facebook.com/profile.php?id=100087941135518"><img src="PBL/fb2.png" id="fb" alt="fb" ></a>
+<a href="https://instagram.com/wellworthy9?igshid=YmMyMTA2M2Y="><img src="PBL/ig2.png" id="ig" alt="ig" ></a>
+<a href="https://www.tiktok.com/@wellworthy9?_t=8XKrttilaiY&_r=1"><img src="PBL/tt2.png" id="tt" alt="tt" ></a>
 </div>
 </nav>
 
@@ -36,7 +36,7 @@
 
 <nav class="lower col-12 col-s-12 col-ss-12">
 <div class="logo col-2 col-s-3 col-ss-3">
-<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo"></a>
+<a href="index.html"><img src="PBL/Well Worthy 3.png" id="logo" alt="logo" ></a>
 </div>
 
  
@@ -72,7 +72,7 @@
 
       <a href="Donate today.html">
       <div class="d col-2 col-s-4 col-ss-8">
-        <img src="PBL/Donate.png" id="d">
+        <img src="PBL/Donate.png" id="d" alt="donate" >
         <b><h2>Donate</h2></b>
         <h4>Help Us By Donating To The best amazing campagins!</h4>
       </div>
@@ -80,7 +80,7 @@
       
       <a href="Aboutus.html">
       <div class="v col-2 col-s-4 col-ss-8">
-        <img src="PBL/Volunteer.png" id="v">
+        <img src="PBL/Volunteer.png" id="v" alt="volunteer" >
         <b><h2>About Us</h2></b>
         <h4>Know more about us!</h4>
       </div>
@@ -88,7 +88,7 @@
 
       <a href="Fundraise.html">
       <div class="f col-2 col-s-4 col-ss-8">
-        <img src="PBL/Fundraise.png" id="f">
+        <img src="PBL/Fundraise.png" id="f" alt="fundraise" >
         <b><h2>Fundraise</h2></b>
         <h4>Fundraise For Your Chosen Charity!</h4>
       </div>
@@ -96,7 +96,7 @@
       
       <a href="Adopt.html">
       <div class="a col-2 col-s-4 col-ss-8">
-        <img src="PBL/adopt1.png" id="a">
+        <img src="PBL/adopt1.png" id="a" alt="adopt" >
         <b><h2>Adopt</h2></b>
         <h4>Adopt The Adoptables And Adorables!</h4>
       </div>
